[metadata]
# Version will be bumped by semantic release
version = 3.2
name = mezzy
description = Utilities for Mezzanine CMS
long_description = file: README.md
long_description_content_type = text/markdown
keywords = django, mezzanine, utilities, helpers
maintainer = Unplug Studio
maintainer-email = hello@unplug.studio
author = Unplug Studio
author-email = hello@unplug.studio
url = https://github.com/unplugstudio/mezzy
project_urls =
    Source=https://github.com/unplugstudio/mezzy
    Tracker=https://github.com/unplugstudio/mezzy/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    mezzanine >= 4
    django >= 3

[options.extras_require]
testing =
    flake8 >= 3, <4
    pytest >= 4.0.0, <6

# Building

[bdist_wheel]
universal=1

# Testing

[tox:tox]
envlist =
    py36
    py37
    py38
    py39
    flake8
    black

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38, flake8, black
    3.9: py39, flake8, black

[testenv]
description = run test suite under {basepython}
extras = testing
commands = pytest {posargs:tests}

[testenv:flake8]
extras = testing
commands = flake8 .

[testenv:black]
deps = black
commands = black . --check --exclude "(migrations/|dist/|build/|\.egg|\.tox)"

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    migrations
    dist
    build
    .tox
    .eggs
    *.egg-info
